--- a/Case-01/assets/styles/style.css
+++ b/Case-01/assets/styles/style.css
@@ -1,22 +1,29 @@
+body {
+    margin: 0;
+}
 section{
     width: 100vw;
     height: 100vh;
     position: relative;
 }
 section>.main{
-    height: 50%;
-    width: 50%;
+    height: 50vh;
+    width: 50vw;
     position: absolute;
 }
 section>.main:nth-child(1){
     background: #E4181E;
+    left: 0;
+    top: 0;
 }
 section>.main:nth-child(2){
     background: #01DC03;
     right: 0;
+    top: 0;
 }
 section>.main:nth-child(3){
     background: #FFEB0A;
+    left: 0;
     bottom: 0;
 }
 section>.main:nth-child(4){
@@ -29,6 +36,8 @@ section>.main>div{
     aspect-ratio: 1/1;
     background: #F7F9F8;
     border-radius: 100%;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
     position: absolute;
     left: 0;
     right: 0;
@@ -52,60 +61,75 @@ section>.main>div>div{
     aspect-ratio: 1/1;
     background: #F7F9F8;
     position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    margin: auto;
+    left: calc(50vw - 6vw);
+    top: calc(50vh - 6vw);
 }
 #mid-circle{
     width: 7vw;
     aspect-ratio: 1/1;
     background: #E4181E;
     border-radius: 100%;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    position: relative;
+    top: 2.5vw;
     margin: auto;
 }
-.corner{
+.half{
     width: 14vw;
+    height: 7vw;
+    background: #F7F9F8;
+    position: absolute;
+}
+.quarter{
+    width: 7vw;
     aspect-ratio: 1/1;
     background: #F7F9F8;
-    border-radius: 100%;
     position: absolute;
 }
 #corner1{
-    top: calc(-14vw/2);
-    left: calc(-14vw/2);
+    top: 0;
+    left: 0;
+    border-radius: 0 0 100px 0;
+    -moz-border-radius: 0 0 100px 0;
+    -webkit-border-radius: 0 0 100px 0;
 }
 #corner2{
     left: 0;
     right: 0;
-    top: calc(-16vw/2);
+    top: 0;
     margin: auto;
+    border-radius: 0 0 100px 100px;
+    -moz-border-radius: 0 0 100px 100px;
+    -webkit-border-radius: 0 0 100px 100px;
 }
 #corner3{
-    top: calc(-14vw/2);
-    right: calc(-14vw/2);
+    top: 0;
+    right: 0;
+    border-radius: 0 0 0 100px;
+    -moz-border-radius: 0 0 0 100px;
+    -webkit-border-radius: 0 0 0 100px;
 }
 #corner4{
-    bottom: calc(-14vw/2);
-    left: calc(-14vw/2);
+    top: calc(100vh - 7vw);
+    left: 0;
+    border-radius: 0 100px 0 0;
+    -moz-border-radius: 0 100px 0 0;
+    -webkit-border-radius: 0 100px 0 0;
 }
 #corner5 {
     left: 0;
     right: 0;
-    bottom: calc(-16vw/2);
+    top: calc(100vh - 7vw);
     margin: auto;
+    border-radius: 100px 100px 0 0;
+    -moz-border-radius: 100px 100px 0 0;
+    -webkit-border-radius: 100px 100px 0 0;
 }
 #corner6{
-    bottom: calc(-14vw/2);
-    right: calc(-14vw/2);
-}
-body {
-    overflow: hidden;
-    margin: 0;
+    top: calc(100vh - 7vw);
+    right: 0;
+    border-radius: 100px 0 0 0;
+    -moz-border-radius: 100px 0 0 0;
+    -webkit-border-radius: 100px 0 0 0;
 }
