--- a/Case-02/assets/styles/style.css
+++ b/Case-02/assets/styles/style.css
@@ -1,3 +1,6 @@
+body{
+    margin: 0;
+}
 header{
     position: relative;
     height: 60px;
@@ -81,6 +84,31 @@ footer>span{
     font-size: medium;
     color: #F7F9F8;
 }
-body{
-    margin: 0;
+@media all and (max-width: 768px) {
+    header>img{
+        width: 115px;
+        left: 3px;
+        top: 19px;
+    }
+    main>aside{
+        width: 120px;
+    }
+    main>aside>nav>dl{
+        margin-top: 20px;
+    }
+    main>aside>nav>dl>dd{
+        margin-left: 8px;
+        margin-bottom: 15px;
+    }
+    main>section{
+        margin-left: 124px;
+    }
+}
+@media all and (max-width: 560px) {
+    header>nav{
+        display: none;
+    }
+    main>section>div>div {
+        width: 99.25%;
+    }
 }
