--- a/Case-03/assets/styles/style.css
+++ b/Case-03/assets/styles/style.css
@@ -1,15 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+body{
+    margin: 0;
+    height: 100vh;
+}
 #frame{
-    width: 224px;
+    width: 200px;
     aspect-ratio: 1/1;
     border: 12px solid #b49085;
     border-radius: 100%;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
     position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     top: 0;
     margin: auto;
-    z-index: 9999;
+    z-index: 999;
 }
 
 #frame>div{
@@ -17,6 +24,8 @@
     aspect-ratio: 1/1;
     border: 12px solid #f90004;
     border-radius: 100%;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
     position: absolute;
     left: 0;
     right: 0;
@@ -32,11 +41,13 @@ section{
     width: fit-content;
 }
 section>div{
-    width: 204px;
+    position: relative;
+    width: 180px;
     aspect-ratio: 1/1;
     border-radius: 100%;
-    margin: calc(50vh - 104px) 0;
-    position: relative;
+    -moz-border-radius: 100%;
+    -webkit-border-radius: 100%;
+    margin: calc(50vh - 90px) 0;
 }
 section>div:nth-child(1){
     background: #8e307a;
@@ -52,14 +63,12 @@ section>div>span{
     color: #F7F9F8;
     width: fit-content;
     height: fit-content;
-    font-size: xx-large;
+    font-size: 27px;
     right: 0;
     top: 0;
     left: 0;
     bottom: 0;
     margin: auto;
     text-align: center;
-}
-body{
-    margin: 0;
+    font-family: 'Lilita One', cursive;
 }
